# 2st-sem-homework-repo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-and-lint.yml
scripts/: check-format.sh  run-tidy.sh
src/CSV/: CMakeLists.txt  functions.c  functions.h  main.c  makefile  parcer.c  parcer.h  parser.c
tests/CSV/: CMakeLists.txt  test_csv_parser.c
